InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyTransaction__c/vlocity_ins__PolicyTransaction__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Replaced by Transaction (AssetTransaction_c). Master-detail child object of Policy (deprecated).</description>
    <label>Policy Transaction</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>