InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyTransaction__c/fields/vlocity_ins__PolicyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyId__c</fullName>
    <label>Policy</label>
    <referenceTo>vlocity_ins__Policy__c</referenceTo>
    <relationshipLabel>Policy Transactions</relationshipLabel>
    <relationshipName>PolicyTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>