InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyTransaction__c/fields/vlocity_ins__TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TransactionDate__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>