InsuranceOrg/force-app/main/default/objects/vlocity_ins__PolicyTransaction__c/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Premium Paid</fullName>
            </value>
            <value>
                <fullName>Billing Notice</fullName>
            </value>
            <value>
                <fullName>Surrender</fullName>
            </value>
            <value>
                <fullName>Policy Loan</fullName>
            </value>
            <value>
                <fullName>Lapse</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Changed/Endorsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>